src/scss/reviews.scss
* {
  box-sizing: border-box;
}

.reviews {
  width: 320px;
  margin: 0 auto;
  overflow: visible;

  @media screen and (min-width: 1200px) {
    width: 1200px;
  }
}

.reviews-container {
  padding: 0 5px 0 24px;
  overflow: visible;

  @media screen and (min-width: 1200px) {
    padding: 0 13px 0 80px;
  }
}

.reviews-tittle {
  width: 272px;
  height: 60px;
  font-size: 25px;
  font-weight: 400;
  line-height: 60px;
  text-align: center;
  margin-bottom: 30px;

  @media screen and (min-width: 1200px) {
    width: 1040px;
    font-size: 40px;
  }
}

.reviews-swiper {
  max-width: 100%;
  width: 100%;
  height: 384px;
  overflow: visible;
  margin-bottom: 49px;

  @media screen and (min-width: 1200px) {
    margin-bottom: 0;
  }
}

.reviews-swiper-wrapper {
  display: flex;
}

.swiper-slide.reviews-swiper-slide {
  width: 272px;
  border-radius: 13.5px;
  background-color: #f4cba7;
  margin-bottom: 49px;
  padding: 24px 33px 34px 16.5px;
  flex-shrink: 0;

  @media screen and (min-width: 1200px) {
    width: 361px;
    padding: 24px 44px 24px 22px;
  }
}

.sumbol {
  width: 20px;
  height: 37px;
  font-family: 'Roboto Slab', serif;
  font-size: 53px;
  font-weight: 700;
  color: #ffffff;
  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black,
    1px 1px 0 black;

  @media screen and (min-width: 1200px) {
    width: 26px;
    height: 37.5px;
  }
}

.reviews-slide-text {
  width: 187.5px;
  height: 162px;
  font-size: 22px;
  font-weight: 500;
  margin-left: 35px;
  margin-bottom: 24px;

  @media screen and (min-width: 1200px) {
    width: 249px;
    height: 145px;
    margin-left: 46px;
    margin-bottom: 27px;
    font-size: 24px;
  }
}

.review-rate {
  width: 137.4px;
  height: 18px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 0 auto 26px;

  @media screen and (min-width: 1200px) {
    margin-bottom: 39px;
    margin-left: 92px;
  }
}

.review-person {
  width: 164px;
  height: 60px;
  margin: 0 auto;
  display: flex;

  @media screen and (min-width: 1200px) {
    width: 219px;
    height: 70px;
  }
}

.person-img {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  margin-right: 15px;

  @media screen and (min-width: 1200px) {
    width: 70px;
    height: 70px;
    margin-right: 30px;
  }
}

.person-tittle {
  font-size: 18px;
  font-weight: 500;
  line-height: 60px;
}

